# TestesTCC

./: CMakeLists.txt  common.h  main  main.cu  test.b  test2.b  visualize.py
python/: visualize.py
src/: common.h  cuda_timer.cu  cuda_timer.h  file_manager.h  filters.cu  filters.h  main.cu  matrix_accessor.h  memory_manager.h  misc.cu  misc.h
